<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoback"
    tools:context=".Information">


    //Xml para ver informacion desarrollador
    <TextView
        android:id="@+id/text_view_id2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/informaci_n"
        android:textColor="#FFC107"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_view_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/text_view_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desarrolladores"
        android:textColor="#FFC107"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_view_id5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_id2"
        app:layout_constraintVertical_bias="0.264" />

    <TextView
        android:id="@+id/text_view_id4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacto_us"
        android:textColor="#FFC107"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/text_view_id3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_id5"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/text_view_id6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/derechos_reservados_ugb_2022"
        android:textColor="#FFC107"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_id3"
        app:layout_constraintVertical_bias="0.831" />

    <TextView
        android:id="@+id/text_view_id5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edwin_adony_ulloa_diaz"
        android:textColor="#90A4AE"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/text_view_id4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_id"
        app:layout_constraintVertical_bias="0.355" />

    <TextView
        android:id="@+id/text_view_id3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/smis001721_ugb_edu_sv"
        android:textColor="#000000"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/text_view_id6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_id4"
        app:layout_constraintVertical_bias="0.539" />



</androidx.constraintlayout.widget.ConstraintLayout>